Change new Double to Double.valueOf
This fixes Java deprecation warnings